Rafatorando testes e melhorando codigo